--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<script src="js/app.js"></script>
 </head>
 <body>
+	<div class="tab">
+		<button class="tablinks active" id="future-btn">Future</button>
+		<button class="tablinks" id="today-btn">Today</button>
+		<button class="tablinks" id="past-btn">Past</button>
+	</div>
 
 </body>
 </html>
