--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div class="tab">
+		<span class="header-title">UTM Events</span>
 		<button class="tablinks active" id="future-btn">Future</button>
 		<button class="tablinks" id="today-btn">Today</button>
 		<button class="tablinks" id="past-btn">Past</button>
